# ubermind

./: BUILDING.md  CHANGELOG.md  Cargo.toml  LICENSE  PLAN-v2.md  README.md  install.sh  justfile  release.sh  tmux cheatsheet.md
completions/: ub.bash  ub.fish  ub.zsh
crates/kagaya/: Cargo.toml  README.md
crates/kagaya/src/: lib.rs  logs.rs  output.rs  supervisor.rs  types.rs
crates/kagaya/tests/: integration.rs
crates/muzan/: Cargo.toml  README.md
crates/muzan/examples/: echo.rs
crates/muzan/src/: clap.rs  client.rs  daemon.rs  lib.rs  paths.rs  server.rs
crates/muzan/tests/: integration.rs
crates/ubermind-cli/: Cargo.toml  build.rs
crates/ubermind-cli/src/: config.rs  launchd.rs  logs.rs  main.rs  protocol.rs  self_update.rs  types.rs
crates/ubermind-cli/src/daemon/: api.rs  mod.rs  output.rs  supervisor.rs
crates/ubermind-core/: Cargo.toml
crates/ubermind-core/src/: config.rs  lib.rs  logs.rs  protocol.rs  types.rs
crates/ubermind-daemon/: Cargo.toml  build.rs
crates/ubermind-daemon/src/: api.rs  main.rs  output.rs  supervisor.rs
extended_features/: README.md  action-confirmation.md  echo-filtering.md  ub-add-shorthand.md
src/: main.rs
todos/: kagaya-crate.md  launchd_updates.md  muzan-crate.md
ui/: README.md  package.json  pnpm-lock.yaml  svelte.config.js
ui/src/: app.html
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: commands.rs  lib.rs  server.rs  services.rs  tmux.rs
ui/src/lib/: api.ts
ui/src/lib/components/: ServiceCard.svelte  ServiceRow.svelte  Terminal.svelte
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/service/[name]/: +page.svelte
