[package]
name = "ubermind"
version = "0.5.0"
edition = "2021"
description = "Manage multiple overmind instances across projects"
license = "MIT"
repository = "https://github.com/mrgnw/ubermind"
keywords = ["overmind", "process-manager", "daemon", "procfile"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = ["ui/"]
include = ["src/**/*", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE", "completions/**/*"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/ubermind-v{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"

[dependencies]
