[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.6.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/mrgnw/ubermind"

[workspace.dependencies]
ubermind-core = { path = "crates/ubermind-core", version = "0.6.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
nix = { version = "0.29", features = ["signal", "process"] }
tracing = "0.1"
tracing-subscriber = "0.3"
owo-colors = "4"
plist = "1"
