[package]
name = "kagaya"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Process supervisor toolkit for Rust CLIs — spawn, monitor, restart, and capture output"
readme = "README.md"
keywords = ["supervisor", "process-manager", "daemon", "procfile", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
nix = { workspace = true }
tracing = { workspace = true }
