[package]
name = "kagaya"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Process supervisor toolkit for Rust CLIs — spawn, monitor, restart, and capture output"
readme = "README.md"
keywords = ["supervisor", "process-manager", "daemon", "procfile", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "kagaya"
path = "src/bin/kagaya/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
nix = { workspace = true }
tracing = { workspace = true }

# CLI binary dependencies
muzan = { path = "../muzan" }
toml = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
owo-colors = { workspace = true }
plist = { workspace = true }
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"
netstat2 = "0.11"
