[package]
name = "muzan"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Daemon lifecycle toolkit for Rust CLIs — Unix socket IPC, auto-start, PID management"
keywords = ["daemon", "ipc", "unix-socket", "process-manager", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
nix = { workspace = true }
tracing = { workspace = true }
