[package]
name = "ubermind-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for ubermind daemon manager"
readme = "../../README.md"
keywords = ["process-manager", "daemon", "procfile"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ubermind"
path = "src/main.rs"

[dependencies]
ubermind-core = { workspace = true }
serde_json = { workspace = true }
