[package]
name = "ubermind"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Process daemon manager with Procfile support - v2 alpha with native supervision"
readme = "../../README.md"
keywords = ["process-manager", "daemon", "procfile", "supervisor"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ubermind"
path = "src/main.rs"

[dependencies]
ubermind-core = { workspace = true }
serde_json = { workspace = true }
