[package]
name = "ubermind"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Process daemon manager with Procfile support"
readme = "../../README.md"
keywords = ["process-manager", "daemon", "procfile", "supervisor"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ubermind"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
nix = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
owo-colors = { workspace = true }
plist = { workspace = true }
libproc = "0.14"
netstat2 = "0.11"
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"
