[package]
name = "ubermind-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and configuration for ubermind process manager"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
