[package]
name = "ubermind-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Daemon process supervisor for ubermind - v2 alpha with native supervision"
keywords = ["process-manager", "daemon", "supervisor"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ubermind-daemon"
path = "src/main.rs"

[dependencies]
ubermind-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
libproc = "0.14"
netstat2 = "0.11"
nix = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"
